.gitignore update to cover python and pycharm

--- a/documentation/cs-poliactor_doc.tex
+++ b/documentation/cs-poliactor_doc.tex
@@ -14,4 +14,16 @@
 
 \section{Cel projektu}
 
+Zaprojektowanie i implementacja aplikacji wykrywającej twarz w obrazie z kamery oraz odnajdującej w zdefiniowanej bazie danych najbardziej podobną twarz. Aplikacja będzie wykorzystywała metody uczenia maszynowego i zostanie zaimplementowana w języku Python.
+
+\section{Wymagania}
+
+Do poprawnego działania programu konieczne są:
+
+\begin{itemize}
+	\item Python 3.6 lub nowszy
+	\item ...
+\end{itemize}
+
 \end{document}
+
