--- a/documentation/cs-poliactor_doc.tex
+++ b/documentation/cs-poliactor_doc.tex
@@ -23,6 +23,10 @@ Do poprawnego działania programu konieczne będą:
 
 \begin{itemize}
 	\item Docker -- wymagania dostępne na stronie producenta, zależne od systemu operacyjnego;
+	\begin{itemize}
+		\item 4GB RAM
+		\item wersja systemu obsługująca wirtualizację
+	\end{itemize}
 	\item 1GB przestrzeni dyskowej;
 	\item przeglądarka internetowa z obsługą JavaScript.
 \end{itemize}
