started working on plotting

--- a/notebooks/faces_visualization.ipynb
+++ b/notebooks/faces_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "292"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "(765,)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "[5 rows x 128 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,16 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f2d9c72beb8>]"
+       "[<matplotlib.lines.Line2D at 0x7fc2843162b0>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -462,16 +462,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f2d96ebb3c8>]"
+       "[<matplotlib.lines.Line2D at 0x7fc27eaa0390>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -623,61 +623,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "pca = PCA()\n",
-    "faces_components = pca.fit_transform(faces_df)"
+    "faces_components = pca.fit_transform(top_faces)\n",
+    "top_pca = pd.DataFrame(faces_components[:, :2], index=top_faces.index, ).add_prefix('pca_').reset_index()\n",
+    "top_pca.person = top_pca.person.astype('object')\n",
+    "\n",
+    "webcam_components = pca.transform(test_faces_df)\n",
+    "webcam_pca = pd.DataFrame(webcam_components[:, :2], index=test_faces_df.index, ).add_prefix('pca_').reset_index()\n",
+    "webcam_pca.person = webcam_pca.person.astype('object')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib.pyplot as plt\n",
-    "# import matplotlib.animation\n",
-    "# import seaborn as sns\n",
-    "# import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.animation\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
     "\n",
-    "# def get_data(i=0):\n",
-    "#     x,y = np.random.normal(loc=i,scale=3,size=(2, 260))\n",
-    "#     return x,y\n",
+    "def get_data(i=0):\n",
+    "    x,y = np.random.normal(loc=i,scale=3,size=(2, 260))\n",
+    "    return x,y\n",
     "\n",
-    "# x,y = get_data()\n",
-    "# g = sns.JointGrid(x=x, y=y, size=4)\n",
-    "# lim = (-10,10)\n",
+    "x,y = get_data()\n",
+    "g = sns.JointGrid(x=x, y=y, size=4)\n",
+    "lim = (-10,10)\n",
     "\n",
-    "# def prep_axes(g, xlim, ylim):\n",
-    "#     g.ax_joint.clear()\n",
-    "#     g.ax_joint.set_xlim(xlim)\n",
-    "#     g.ax_joint.set_ylim(ylim)\n",
-    "#     g.ax_marg_x.clear()\n",
-    "#     g.ax_marg_x.set_xlim(xlim)\n",
-    "#     g.ax_marg_y.clear()\n",
-    "#     g.ax_marg_y.set_ylim(ylim)\n",
-    "#     plt.setp(g.ax_marg_x.get_xticklabels(), visible=False)\n",
-    "#     plt.setp(g.ax_marg_y.get_yticklabels(), visible=False)\n",
-    "#     plt.setp(g.ax_marg_x.yaxis.get_majorticklines(), visible=False)\n",
-    "#     plt.setp(g.ax_marg_x.yaxis.get_minorticklines(), visible=False)\n",
-    "#     plt.setp(g.ax_marg_y.xaxis.get_majorticklines(), visible=False)\n",
-    "#     plt.setp(g.ax_marg_y.xaxis.get_minorticklines(), visible=False)\n",
-    "#     plt.setp(g.ax_marg_x.get_yticklabels(), visible=False)\n",
-    "#     plt.setp(g.ax_marg_y.get_xticklabels(), visible=False)\n",
+    "def prep_axes(g, xlim, ylim):\n",
+    "    g.ax_joint.clear()\n",
+    "    g.ax_joint.set_xlim(xlim)\n",
+    "    g.ax_joint.set_ylim(ylim)\n",
+    "    g.ax_marg_x.clear()\n",
+    "    g.ax_marg_x.set_xlim(xlim)\n",
+    "    g.ax_marg_y.clear()\n",
+    "    g.ax_marg_y.set_ylim(ylim)\n",
+    "    plt.setp(g.ax_marg_x.get_xticklabels(), visible=False)\n",
+    "    plt.setp(g.ax_marg_y.get_yticklabels(), visible=False)\n",
+    "    plt.setp(g.ax_marg_x.yaxis.get_majorticklines(), visible=False)\n",
+    "    plt.setp(g.ax_marg_x.yaxis.get_minorticklines(), visible=False)\n",
+    "    plt.setp(g.ax_marg_y.xaxis.get_majorticklines(), visible=False)\n",
+    "    plt.setp(g.ax_marg_y.xaxis.get_minorticklines(), visible=False)\n",
+    "    plt.setp(g.ax_marg_x.get_yticklabels(), visible=False)\n",
+    "    plt.setp(g.ax_marg_y.get_xticklabels(), visible=False)\n",
     "\n",
     "\n",
-    "# def animate(i):\n",
-    "#     g.x, g.y = get_data(i)\n",
-    "#     prep_axes(g, lim, lim)\n",
-    "#     g.plot_joint(sns.kdeplot, cmap=\"Purples_d\")\n",
-    "#     g.plot_marginals(sns.kdeplot, color=\"m\", shade=True)\n",
+    "def animate(i):\n",
+    "    g.x, g.y = get_data(i)\n",
+    "    prep_axes(g, lim, lim)\n",
+    "    g.plot_joint(sns.kdeplot, cmap=\"Purples_d\")\n",
+    "    g.plot_marginals(sns.kdeplot, color=\"m\", shade=True)\n",
     "\n",
-    "# frames=np.sin(np.linspace(0,2*np.pi,17))*5\n",
-    "# ani = matplotlib.animation.FuncAnimation(g.fig, animate, frames=frames, repeat=True)\n",
+    "frames=np.sin(np.linspace(0,2*np.pi,17))*5\n",
+    "ani = matplotlib.animation.FuncAnimation(g.fig, animate, frames=frames, repeat=True)\n",
     "\n",
-    "# plt.show()"
+    "plt.show()\n",
+    "\n",
+    "sns.set(rc={'figure.figsize':(20,15)})\n",
+    "ax = sns.scatterplot(data=top_pca, x='pca_0', y='pca_1', hue='person', s=100, style='test')\n",
+    "box = ax.get_position()\n",
+    "ax.set_position([box.x0, box.y0, box.width * 0.8, box.height])\n",
+    "ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "webcam_length = webcam_pca.shape[0]\n",
+    "\n",
+    "def get_data(i=0):\n",
+    "    x,y = x, y = webcam_pca.iloc[i % webcam_length, 1:]\n",
+    "    return x,y\n",
+    "\n",
+    "def animate(i):\n",
+    "    g.x, g.y = get_data(i)\n",
+    "    prep_axes(g, lim, lim)\n",
+    "    g.plot_joint(sns.kdeplot, cmap=\"Purples_d\")\n",
+    "    g.plot_marginals(sns.kdeplot, color=\"m\", shade=True)\n",
+    "\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -694,6 +720,35 @@
     " - przetestowanie róznych embedingów czy któryś lepiej działa\n",
     " - lepsza selekcja zdjęć poszczególnych aktorów, żeby były lepiej separowalne w przestrzeni\n",
     " - różne sposoby uśredniania klatek z kamery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = webcam_pca.iloc[1, 1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2737584646703792, 0.06650830169465906)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y"
    ]
   },
   {
