animated plot and bunch of other things
- plt blocks flask thread
- dockerfile updated
- actor name available and displayed in forntend
- frontend layout in progress

--- a/notebooks/faces_visualization.ipynb
+++ b/notebooks/faces_visualization.ipynb
@@ -12,6 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "from utils.face_functions import face_to_vec"
@@ -26,7 +27,261 @@
     "IMG_PATH = '../../images2/'\n",
     "TEST_IMG_PATH = '../../test_photos/'\n",
     "TEST_DF_FILE = 'test_faces_df.pkl'\n",
-    "DF_FILE = 'faces_df.pkl'"
+    "DF_FILE = 'faces_df.pkl'\n",
+    "\n",
+    "FLASK_DF = '../project/poliaktor_server/resources/actors_photos_encodings.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enc_df = pd.read_pickle(FLASK_DF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actor</th>\n",
+       "      <th>photo</th>\n",
+       "      <th>enc_0</th>\n",
+       "      <th>enc_1</th>\n",
+       "      <th>enc_2</th>\n",
+       "      <th>enc_3</th>\n",
+       "      <th>enc_4</th>\n",
+       "      <th>enc_5</th>\n",
+       "      <th>enc_6</th>\n",
+       "      <th>enc_7</th>\n",
+       "      <th>...</th>\n",
+       "      <th>enc_118</th>\n",
+       "      <th>enc_119</th>\n",
+       "      <th>enc_120</th>\n",
+       "      <th>enc_121</th>\n",
+       "      <th>enc_122</th>\n",
+       "      <th>enc_123</th>\n",
+       "      <th>enc_124</th>\n",
+       "      <th>enc_125</th>\n",
+       "      <th>enc_126</th>\n",
+       "      <th>enc_127</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gary Oldman</td>\n",
+       "      <td>images/Gary Oldman/7.jpg</td>\n",
+       "      <td>-0.055487</td>\n",
+       "      <td>0.066111</td>\n",
+       "      <td>0.067527</td>\n",
+       "      <td>-0.079557</td>\n",
+       "      <td>-0.121692</td>\n",
+       "      <td>0.038962</td>\n",
+       "      <td>-0.060826</td>\n",
+       "      <td>-0.075380</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.045455</td>\n",
+       "      <td>0.041222</td>\n",
+       "      <td>-0.011413</td>\n",
+       "      <td>0.026681</td>\n",
+       "      <td>-0.192276</td>\n",
+       "      <td>-0.176735</td>\n",
+       "      <td>-0.013850</td>\n",
+       "      <td>-0.050759</td>\n",
+       "      <td>0.036884</td>\n",
+       "      <td>0.079497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Gary Oldman</td>\n",
+       "      <td>images/Gary Oldman/5.jpg</td>\n",
+       "      <td>-0.108676</td>\n",
+       "      <td>0.104881</td>\n",
+       "      <td>0.067565</td>\n",
+       "      <td>-0.044377</td>\n",
+       "      <td>-0.067281</td>\n",
+       "      <td>0.000147</td>\n",
+       "      <td>0.015220</td>\n",
+       "      <td>-0.045349</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.009480</td>\n",
+       "      <td>0.053723</td>\n",
+       "      <td>0.104219</td>\n",
+       "      <td>-0.019791</td>\n",
+       "      <td>-0.245652</td>\n",
+       "      <td>-0.084973</td>\n",
+       "      <td>0.094189</td>\n",
+       "      <td>-0.000315</td>\n",
+       "      <td>0.050925</td>\n",
+       "      <td>0.005374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gary Oldman</td>\n",
+       "      <td>images/Gary Oldman/2.jpg</td>\n",
+       "      <td>-0.177077</td>\n",
+       "      <td>0.097902</td>\n",
+       "      <td>0.086530</td>\n",
+       "      <td>0.030177</td>\n",
+       "      <td>-0.162912</td>\n",
+       "      <td>-0.012385</td>\n",
+       "      <td>-0.009377</td>\n",
+       "      <td>-0.063960</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.066748</td>\n",
+       "      <td>0.031163</td>\n",
+       "      <td>0.057222</td>\n",
+       "      <td>-0.011238</td>\n",
+       "      <td>-0.188084</td>\n",
+       "      <td>-0.135517</td>\n",
+       "      <td>0.036785</td>\n",
+       "      <td>-0.093843</td>\n",
+       "      <td>0.031889</td>\n",
+       "      <td>0.069357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gary Oldman</td>\n",
+       "      <td>images/Gary Oldman/9.jpg</td>\n",
+       "      <td>-0.027222</td>\n",
+       "      <td>0.113673</td>\n",
+       "      <td>0.060222</td>\n",
+       "      <td>0.004697</td>\n",
+       "      <td>-0.108462</td>\n",
+       "      <td>-0.044662</td>\n",
+       "      <td>-0.022470</td>\n",
+       "      <td>-0.114979</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.011625</td>\n",
+       "      <td>0.032442</td>\n",
+       "      <td>0.046576</td>\n",
+       "      <td>0.009016</td>\n",
+       "      <td>-0.177356</td>\n",
+       "      <td>-0.111151</td>\n",
+       "      <td>0.039814</td>\n",
+       "      <td>-0.033791</td>\n",
+       "      <td>0.028648</td>\n",
+       "      <td>0.055986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gary Oldman</td>\n",
+       "      <td>images/Gary Oldman/6.jpg</td>\n",
+       "      <td>-0.121590</td>\n",
+       "      <td>0.152898</td>\n",
+       "      <td>0.054809</td>\n",
+       "      <td>-0.049403</td>\n",
+       "      <td>-0.098498</td>\n",
+       "      <td>0.012928</td>\n",
+       "      <td>-0.038519</td>\n",
+       "      <td>-0.099658</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.057991</td>\n",
+       "      <td>0.044010</td>\n",
+       "      <td>0.049583</td>\n",
+       "      <td>-0.048271</td>\n",
+       "      <td>-0.242338</td>\n",
+       "      <td>-0.108376</td>\n",
+       "      <td>0.081744</td>\n",
+       "      <td>-0.086771</td>\n",
+       "      <td>0.059629</td>\n",
+       "      <td>0.034310</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 130 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         actor                     photo     enc_0     enc_1     enc_2  \\\n",
+       "0  Gary Oldman  images/Gary Oldman/7.jpg -0.055487  0.066111  0.067527   \n",
+       "1  Gary Oldman  images/Gary Oldman/5.jpg -0.108676  0.104881  0.067565   \n",
+       "2  Gary Oldman  images/Gary Oldman/2.jpg -0.177077  0.097902  0.086530   \n",
+       "3  Gary Oldman  images/Gary Oldman/9.jpg -0.027222  0.113673  0.060222   \n",
+       "4  Gary Oldman  images/Gary Oldman/6.jpg -0.121590  0.152898  0.054809   \n",
+       "\n",
+       "      enc_3     enc_4     enc_5     enc_6     enc_7    ...      enc_118  \\\n",
+       "0 -0.079557 -0.121692  0.038962 -0.060826 -0.075380    ...     0.045455   \n",
+       "1 -0.044377 -0.067281  0.000147  0.015220 -0.045349    ...    -0.009480   \n",
+       "2  0.030177 -0.162912 -0.012385 -0.009377 -0.063960    ...     0.066748   \n",
+       "3  0.004697 -0.108462 -0.044662 -0.022470 -0.114979    ...     0.011625   \n",
+       "4 -0.049403 -0.098498  0.012928 -0.038519 -0.099658    ...     0.057991   \n",
+       "\n",
+       "    enc_119   enc_120   enc_121   enc_122   enc_123   enc_124   enc_125  \\\n",
+       "0  0.041222 -0.011413  0.026681 -0.192276 -0.176735 -0.013850 -0.050759   \n",
+       "1  0.053723  0.104219 -0.019791 -0.245652 -0.084973  0.094189 -0.000315   \n",
+       "2  0.031163  0.057222 -0.011238 -0.188084 -0.135517  0.036785 -0.093843   \n",
+       "3  0.032442  0.046576  0.009016 -0.177356 -0.111151  0.039814 -0.033791   \n",
+       "4  0.044010  0.049583 -0.048271 -0.242338 -0.108376  0.081744 -0.086771   \n",
+       "\n",
+       "    enc_126   enc_127  \n",
+       "0  0.036884  0.079497  \n",
+       "1  0.050925  0.005374  \n",
+       "2  0.031889  0.069357  \n",
+       "3  0.028648  0.055986  \n",
+       "4  0.059629  0.034310  \n",
+       "\n",
+       "[5 rows x 130 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enc_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initials = enc_df.apply(axis=1, func=(lambda row: ''.join([entity[0] for entity in row.actor.split(' ')])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enc_df.insert(2, 'initials', initials)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enc_df.to_pickle(FLASK_DF)"
    ]
   },
   {
